fix z-index

--- a/src/components/header/suggested-container/index.css
+++ b/src/components/header/suggested-container/index.css
@@ -12,6 +12,7 @@
     display: flex;
     padding: 1em;
     border-radius: 5px;
+    z-index: 10;
 }
 
 .suggested-container:after {
