--- a/src/components/products-list/index.css
+++ b/src/components/products-list/index.css
@@ -1,14 +1,16 @@
 .products-list {
-  margin-top: 6em;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 .5em;
+    margin-top: 6em;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 .5em;
+    position: relative;
+    z-index: -1;
 }
 
 .message-list {
-  color: var(--text-color);
-  text-align: center;
-  width: 100%;
+    color: var(--text-color);
+    text-align: center;
+    width: 100%;
 }
